Fixed header spacing issue in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3425,3 +3425,7 @@ blockquote {
 #aboutme-container > section > .logo {
 	flex-shrink: 0;
 }
+
+#header > section + section {
+	margin-top: 2rem;
+}
